samples/_failures_safe/1761470819_037259_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62f52b3f.c: In function ‘main’:
./samples/SAFE/__tmp_62f52b3f.c:149:12: error: missing terminating " character
  149 |     printf("Compressed size: %
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_62f52b3f.c:149:5: error: expected expression at end of input
  149 |     printf("Compressed size: %
      |     ^~~~~~
./samples/SAFE/__tmp_62f52b3f.c:149:5: error: expected declaration or statement at end of input
